--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-i18n": "^8.16.0",
+    "vue-meta": "^2.3.3",
+    "vue-skeleton-webpack-plugin": "^1.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
